--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
+edited:I made some changes
 Hello,this is my github repo for lecturing the students.I will go through the github commands to teach my students how to use github.
+this is my first attempt of github
